<resources>
<!--    Front-->
    <string name="app_name">BookMatch</string>
    <string name="login_text">Login</string>
    <string name="e_mail_field_hint">E-mail</string>
    <string name="password_field_hint">Password</string>
    <string name="password_confirmation_field_hint">Password confirmation</string>
    <string name="remember_me_checkbox_text">Remember me</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_link_text">Not yet registered? Sign Up Now</string>
    <string name="forgot_password_link_text">Forgot password?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="create_account_button_text">Create account</string>
    <string name="email_code_text">Confirm the code you received in your e-mail</string>
    <string name="e_mail_code_field_hint">E-mail code</string>
    <string name="confirm_code_button_text">Confirm code</string>
    <string name="change_password_text">Change your password</string>
    <string name="new_password_field_hint">New password</string>
    <string name="new_password_confirmation_field_hint">New password confirmation</string>
    <string name="change_password_button_text">Change password</string>
    <string name="explore_bottom_menu_item_text">Explore</string>
    <string name="my_list_bottom_menu_item_text">My list</string>
    <string name="reviews_bottom_menu_item_text">Reviews</string>
    <string name="logout_bottom_menu_item_text">Logout</string>
    <string name="add_review_text">Add new review</string>
    <string name="edit_review_text">Edit review</string>
    <string name="review_field_hint">Write here your impressions about the book…</string>
    <string name="rating_field_hint">Rating</string>
    <string name="save_review_button_text">Save</string>
    <string name="delete_review_button_text">Delete</string>
    <string name="book_reviewed_field_hint">Book reviewed</string>
    <string name="author_reviewed_field_hint">Author</string>
    <string name="book_name_filter_field_hint">Name of the book</string>
    <string name="my_list_empty">Your list is empty!</string>
    <string name="logout_dialog_text">Do you really want to log out?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_deny">No</string>
    <string name="delete_my_list_dialog_text">Do you really want to remove this book from your list?</string>
    <string name="reviews_empty">Your reviews is empty!</string>
    <string name="delete_review_dialog_text">Do you really want to delete this review?</string>

<!--    Success messages-->
    <string name="review_added">The review was added successfully!</string>
    <string name="book_added">The book was added to your list successfully!</string>
    <string name="book_removed">The book was removed from your list successfully!</string>
    <string name="review_removed">The review was deleted successfully!</string>
    <string name="review_edited">The review was saved successfully!</string>
</resources>