<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/loginbkg"
        tools:context=".ui.Login">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@drawable/custom_edittext">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:id="@+id/login_text"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/purple"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/email"
                    android:autofillHints="email"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/e_mail_field_hint"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/outline_admin_panel_settings_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password_field_hint"
                    android:importantForAutofill="no"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="20dp"/>

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/remember_me"
                    android:text="@string/remember_me_checkbox_text"
                    android:layout_marginTop="10dp"
                    android:checked="true"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/login_button"
                    android:text="@string/login_button_text"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/purple"
                    app:cornerRadius="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/sign_up_link_text"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/signup"
            android:textColor="@color/purple"
            android:layout_marginBottom="-10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/forgot_password_link_text"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/forgot_password"
            android:textColor="@color/purple"/>

</LinearLayout>