<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/dialog_background">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:id="@+id/loginText"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sign_up_email"
            android:autofillHints="email"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="@string/e_mail_field_hint"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sign_up_password"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/outline_admin_panel_settings_24"
            android:drawablePadding="8dp"
            android:hint="@string/password_field_hint"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="20dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sign_up_password_confirmation"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/outline_admin_panel_settings_24"
            android:drawablePadding="8dp"
            android:hint="@string/password_confirmation_field_hint"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="20dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/create_account"
            android:text="@string/create_account_button_text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>

</LinearLayout>