<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/dialog_background">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_my_list_dialog_text"
            android:id="@+id/delete_my_list_text"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/confirm_delete_my_list"
            android:text="@string/dialog_confirm"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/red"
            app:cornerRadius = "20dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/deny_delete_my_list"
            android:text="@string/dialog_deny"
            android:textSize="18sp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>

</LinearLayout>