<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/dialog_background">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_text"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_book"
            android:autofillHints="no"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/outline_book_24"
            android:drawablePadding="8dp"
            android:hint="@string/book_reviewed_field_hint"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            android:enabled="false"
            tools:ignore="TextFields"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_author"
            android:autofillHints="no"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="@string/author_reviewed_field_hint"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            android:enabled="false"
            tools:ignore="TextFields"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review"
            android:autofillHints="no"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/outline_contract_edit_24"
            android:drawablePadding="8dp"
            android:hint="@string/review_field_hint"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            tools:ignore="TextFields"
            android:minLines="5"
            android:maxLines="10"
            android:scrollbars="vertical"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/review_rating"
            android:autofillHints="no"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/outline_award_star_24"
            android:drawablePadding="8dp"
            android:hint="@string/rating_field_hint"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            tools:ignore="TextFields"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/save_review"
            android:text="@string/save_review_button_text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/delete_review"
            android:text="@string/delete_review_button_text"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/red"
            android:visibility="invisible"
            app:cornerRadius = "20dp"/>

</LinearLayout>