<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/dialog_background">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_code_text"
            android:id="@+id/email_code_text"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/email_code"
            android:autofillHints="no"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/outline_attach_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/e_mail_code_field_hint"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            tools:ignore="TextFields"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/confirm_code"
            android:text="@string/confirm_code_button_text"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>

</LinearLayout>